update of work 4/04/2020

--- a/index.html
+++ b/index.html
@@ -20,9 +20,6 @@
               alt="Imagine Painting"
               class="small-logo"
             />
-            <!-- <p class="navigation__brand-logo-main">imagine</p>
-            <p class="navigation__brand-logo-lower">painting and</p>
-            <p class="navigation__brand-logo-lowest">decorating</p> -->
           </div>
           <div class="navigation__brand-title">
             <p class="navigation__brand-title-large">
@@ -33,45 +30,6 @@
             </p>
           </div>
         </div>
-        <ul class="navigation__list">
-          <!-- <li class="navigation__item">
-            <a href="" class="navigation__link">
-              <span>Home</span>
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a href="" class="navigation__link">
-              <span>Portfolio</span>
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a href="" class="navigation__link">
-              <span>Contact</span>
-            </a>
-          </li> -->
-          <li class="navigation__item">
-            <!-- <a
-              href="https://twitter.com/kunio_p"
-              target="_blank"
-              class="navigation__link"
-            >
-              <svg class="navigation__link-icon">
-                <use xlink:href="img/sprite.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="navigation__item">
-            <a
-              href="https://www.linkedin.com/in/piotrkuniniec"
-              target="_blank"
-              class="navigation__link"
-            > 
-              <svg class="navigation__link-icon">
-                <use xlink:href="img/sprite.svg#icon-linkedin2"></use>
-              </svg>
-            </a>-->
-          </li>
-        </ul>
       </nav>
 
       <!-- NAVIGATION MENU MOBILE-->
@@ -109,17 +67,20 @@
 
     <!--------------------------------MAIN MULTIMEDIA CONTAINER---------------------------->
     <section class="welcome">
-      <div class="welcome__title">We are professionals</div>
-      <div class="welcome__subtitle">
-        Experts in Residential and Commercial Painting. <br />
-        Proper Preparation For Superior Results
-      </div>
-      <div class="welcome__button u-margin-top-medium">
-        <a
-          href="#"
-          class="btn btn-black btn-black-transparent u-margin-top-small "
-          >Call US<span class="btn-black-line">&nbsp;</span>&rarr;</a
-        >
+      <div class="welcome__container">
+
+        <div class="welcome__container__title">We are professionals</div>
+        <div class="welcome__container__subtitle">
+          Experts in Residential and Commercial Painting. <br />
+          Proper Preparation For Superior Results
+        </div>
+        <div class="welcome__container__button u-margin-top-medium">
+          <a
+            href="#"
+            class="btn btn-black btn-black-transparent u-margin-top-small "
+            >Call US<span class="btn-black-line">&nbsp;</span>&rarr;</a
+          >
+        </div>
       </div>
 
 
@@ -149,9 +110,6 @@
       <div class="about-container__text">
         <div class="about-container__text-header-name">
           About <span class="yellow">US</span>
-        </div>
-        <div class="about-container__text-header-title">
-          <!-- and decorating -->
         </div>
         <div class="about-container__text-header-story">
 
@@ -186,11 +144,21 @@
     <!------------------------------------- SERVICES SECTION---------------------------->
     <section class="services" id="services">
       <div class="services__item services__item-1">
-        <img
-          src="img/picture_11.jpg"
-          class="services__img services__img-1"
-          alt="interior painting"
-        />
+          <figure class="feature">
+              <img
+              src="img/picture_11.jpg"
+              class="feature-img services__img-1"
+              alt="interior painting"
+            />
+            <figcaption class="feature-caption heading-1">
+                <a
+                href="#"
+                class="btn btn-black btn-black-transparent u-margin-top-small "
+                >Our Gallery</a
+              >
+            </figcaption>
+          </figure>
+        
       </div>
       <div class="services__item services__item-2">
         <p class="heading-3 u-margin-top-big">our projects</p>
@@ -210,18 +178,36 @@
         </p>
       </div>
       <div class="services__item services__item-4">
-        <img
-          src="img/picture_15.jpg"
-          class="services__img services__img-2"
-          alt="interior painting"
-        />
+          <figure class="feature">
+              <img
+              src="img/picture_15.jpg"
+              class="feature-img services__img-1"
+              alt="interior painting"
+            />
+            <figcaption class="feature-caption heading-1">
+                <a
+                href="#"
+                class="btn btn-black btn-black-transparent u-margin-top-small "
+                >Our Gallery</a
+              >
+            </figcaption>
+          </figure>
       </div>
       <div class="services__item services__item-5">
-        <img
-          src="img/strata_painting.jpg"
-          class="services__img services__img-3"
-          alt="interior painting"
-        />
+          <figure class="feature">
+              <img
+              src="img/strata_painting.jpg"
+              class="feature-img services__img-1"
+              alt="interior painting"
+            />
+              <figcaption class="feature-caption heading-1">
+                  <a
+                  href="#"
+                  class="btn btn-black btn-black-transparent u-margin-top-small "
+                  >Our Gallery</a
+                >
+              </figcaption>
+          </figure>
       </div>
       <div class="services__item services__item-6">
         <p class="heading-3 u-margin-top-big">our projects</p>
@@ -240,11 +226,20 @@
           </p>
         </div>
         <div class="services__item services__item-8">
-          <img
-            src="img/strata_2.jpg"
-            class="services__img services__img-4"
-            alt="interior painting"
-          />
+            <figure class="feature">
+                <img
+                src="img/strata_2.jpg"
+                class="feature-img services__img-1"
+                alt="interior painting"
+              />
+              <figcaption class="feature-caption heading-1">
+                  <a
+                  href="#"
+                  class="btn btn-black btn-black-transparent u-margin-top-small "
+                  >Our Gallery</a
+                >
+              </figcaption>
+            </figure>
         </div>
     </section> <!------------------------------------- SERVICES SECTION-----------------------END--->
 
