changing logo to grey

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="navigation__brand">
           <div class="navigation__brand-logo">
               <img
-              src="img/logo.png"
+              src="img/logo_header.png"
               alt="Imagine Painting"
               class="small-logo"
             />
@@ -99,7 +99,7 @@
     <div class="about-container">
       <div class="about-container__picture">
         <img
-          src="img/logo.png"
+          src="img/imagine_logo_grey.png"
           alt="Imagine Painting"
           class="about-container__picture-img"
         />
